# munki-pkg

./: Makefile  README.md  index.html  munkipkg  params.json  pyproject.toml  setup.py
SetupAssistantLanguageChooser/: build-info.plist
SuppressSetupAssistant/: build-info.plist
TurnOffBluetooth/: build-info.plist
TurnOffBluetooth/scripts/: postinstall
munki_kickstart/: .gitignore  build-info.json  build-info.plist
